--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <form id="searchForm" class="mb-4">
       <div class="mb-3">
         <label class="form-label" for="pubkey">Pubkey:</label>
-        <input type="text" id="pubkey" class="form-control" name="pubkey" placeholder="Enter Pubkey" required>
+        <input type="text" id="pubkey" class="form-control" name="pubkey" placeholder="Enter Full Pubkey e.g 0x8feda7dd754c63565098f85c181af51e8625a9251a6bdd3447184ea6498519bc489927598ee806c686a4fdcce693c1eb" required>
 
       </div>
       <button type="submit" class="btn btn-primary">Search</button>
@@ -25,8 +25,8 @@
       <thead>
         <tr>
           <th>Pubkey</th>
-          <th>Balance</th>
-          <th>Last Balance</th>
+          <th>Balanc Now</th>
+          <th>Last Checked Balance</th>
           <th>Status</th>
         </tr>
       </thead>
@@ -39,8 +39,10 @@
             <td><%= status %></td>
           </tr>
         <% }) %>
+        
       </tbody>
     </table>
+    <p> Created by Discord : @rizzgm</p>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
