--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,72 +10,41 @@
   <div class="container mt-5">
     <h1 class="mb-4">Search Validator</h1>
     
-    <form id="searchForm" class="mb-4">
-      <div class="mb-3">
+    <form id="searchForm" class="row mb-4">
+      <div class="col-12 col-md-8 mb-3">
         <label class="form-label" for="pubkey">Pubkey:</label>
         <input type="text" id="pubkey" class="form-control" name="pubkey" placeholder="Enter Full Pubkey e.g 0x8feda7dd754c63565098f85c181af51e8625a9251a6bdd3447184ea6498519bc489927598ee806c686a4fdcce693c1eb" required>
-
       </div>
-      <button type="submit" class="btn btn-primary">Search</button>
+      <div class="col-12 col-md-4 d-flex align-items-end mb-3">
+        <button type="submit" class="btn btn-primary w-100">Search</button>
+      </div>
     </form>
   
     <h2 class="mb-3">Validator Data</h2>
     
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Pubkey</th>
-          <th>Balanc Now</th>
-          <th>Last Checked Balance</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% validators.forEach(validator => { %>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
           <tr>
-            <td><%= validator.pubkey %></td>
-            <td><%= validator.balance %></td>
-            <td><%= validator.last_balance %></td>
-            <td><%= status %></td>
+            <th>Pubkey</th>
+            <th>Balance Now</th>
+            <th>Last Checked Balance</th>
+            <th>Status</th>
           </tr>
-        <% }) %>
-        
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% validators.forEach(validator => { %>
+            <tr>
+              <td><%= validator.pubkey %></td>
+              <td><%= validator.balance %></td>
+              <td><%= validator.last_balance %></td>
+              <td><%= status %></td>
+            </tr>
+          <% }) %>
+        </tbody>
+      </table>
+    </div>
     <p> Created by Discord : @rizzgm</p>
   </div>
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script>
-    document.getElementById('searchForm').addEventListener('submit', function(e) {
-  e.preventDefault(); // Menghindari form submit default
-  const pubkey = document.getElementById('pubkey').value;
-
-  fetch('/search', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/x-www-form-urlencoded'
-    },
-    body: new URLSearchParams({
-      pubkey: pubkey
-    })
-  })
-  .then(response => {
-    if (response.ok) {
-      return response.text();
-    } else {
-      throw new Error('Network response was not ok.');
-    }
-  })
-  .then(data => {
-    console.log(data); // Handle response data
-    // Optionally, redirect or update UI
-    window.location.href = `/?pubkey=${encodeURIComponent(pubkey)}`;
-  })
-  .catch(error => {
-    console.error('There was a problem with your fetch operation:', error);
-  });
-});
-    </script>
-</body>
-</html>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9
